--- a/stores/templates/dev_monitor.html
+++ b/stores/templates/dev_monitor.html
@@ -469,6 +469,7 @@
                 <input type="checkbox" id="autoRefresh" checked>
                 자동 새로고침 (1초)
             </label>
+            <button class="btn btn-refresh" onclick="window.open('/dev/test/', '_blank')">🧪 test_core</button>
             <button class="btn btn-refresh" onclick="fetchStatus()">🔄 새로고침</button>
         </div>
     </div>
